push for BIT-20 still need ordinalsbot.com API to actually make the transfer inscription

--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "@dlc-link/dlc-tools": "1.1.1",
     "@fungible-systems/zone-file": "2.0.0",
     "@hirosystems/token-metadata-api-client": "1.2.0",
-    "@leather-wallet/tokens": "0.0.6",
+    "@leather-wallet/tokens": "0.0.5",
     "@ledgerhq/hw-transport-webusb": "6.27.19",
     "@noble/hashes": "1.3.2",
     "@noble/secp256k1": "2.0.0",
@@ -181,19 +181,21 @@
     "axios": "1.6.0",
     "base64url": "3.0.1",
     "bignumber.js": "9.1.2",
-    "bitcoin-address-validation": "2.2.1",
-    "bitcoinjs-lib": "6.1.3",
+    "bitcoin-address-validation": "^2.2.1",
+    "bitcoinjs-lib": "6.1.5",
     "bn.js": "5.2.1",
     "c32check": "2.0.0",
     "chroma-js": "2.4.2",
     "coinselect": "3.1.13",
     "compare-versions": "4.1.3",
+    "cors": "^2.8.5",
     "css-loader": "6.9.0",
     "dayjs": "1.11.8",
     "dompurify": "3.0.6",
     "dotenv": "16.3.1",
     "ecdsa-sig-formatter": "1.0.11",
     "ecpair": "2.1.0",
+    "express": "^4.18.2",
     "formik": "2.4.5",
     "jotai": "2.2.1",
     "jotai-redux": "0.2.1",
@@ -300,6 +302,7 @@
     "deepmerge": "4.3.1",
     "dependency-cruiser": "14.1.1",
     "dotenv-webpack": "8.0.1",
+    "electron": "^27.2.1",
     "esbuild": "0.19.11",
     "esbuild-loader": "4.0.2",
     "eslint-plugin-deprecation": "2.0.0",
